task-622 add registration test and fix doc
